...
  beauty,
  identity;

  String get displayName {
    switch (this) {
      case JournalCategory.positive:
        return 'Positive Things';
      case JournalCategory.negative:
        return 'Negative Things';
      case JournalCategory.gratitude:
        return 'Gratitude';
      case JournalCategory.beauty:
        return 'Beauty';
...
